...
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Pin Required"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/pass_pin"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint=""
                android:gravity="center"
                android:padding="7sp"
...
        android:layout_height="wrap_content"
        android:paddingTop="17dp"
        android:paddingBottom="23dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/join_hub_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/gray_bubble_button"
            android:textAlignment="center"
            android:text="@string/join"
            android:layout_gravity="center"
...
