<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/hub_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAlignment="center"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:background="@drawable/double_end_container" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_button"
        android:onClick="searchVideo"
        android:text="Search Video"
        android:layout_margin="15dp"
        android:paddingTop="2dp"
        android:paddingBottom="4dp"
        android:paddingLeft="9dp"
        android:paddingRight="13dp"
        android:background="@drawable/blue_bubble_button" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/song_List"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/getting_started_container"></android.support.v7.widget.RecyclerView>


</LinearLayout>